# bountiful-yield

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/curves/: test_bootstrap.ipynb
plotting/: __init__.py  curves.py  diagnostics.py
scripts/: execute_notebooks.py  generate_plots.py
src/: __init__.py
src/curves/: bootstrap.py  curve.py  diagnostics.py  exceptions.py  interpolation.py
src/market/: conventions.py  instruments.py
src/math/: rootfinding.py  splines.py
tests/: test_curve.py  test_diagnostics.py  test_interpolation.py
