[tool.poetry]
name = "bountiful-yield"
version = "0.0.1"
description = "bountiful-yield"
authors = ["Gustav Durlind <gustav.durlind@hotmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.14"
numpy = "2.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^24.0"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(\.git|\.venv|build|dist)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--maxfail=1"]
